--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "argon2": "^0.44.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sass": "^1.92.1"
+    "sass": "^1.92.1",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
