--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "argon2": "^0.44.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
