--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sass": "^1.92.1",
+    "swiper": "^12.0.2",
     "zod": "^4.1.8"
   },
   "devDependencies": {
